--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,7 @@
     "import numpy as np\n",
     "\n",
     "# Complete this function! \n",
-    "def distance(a, b, c=2):\n",
+    "def distance(a, b, c=2, verbos= True):\n",
     "    \n",
     "    pass\n",
     "\n",
