--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,8 @@
     "# Complete this function! \n",
     "def distance(a, b, c=2, verbose= True):\n",
     "    if verbose == True:\n",
-    "        \n",
+    "        if c ==1:\n",
+    "            print()\n",
     "    pass\n",
     "\n",
     "test_point_1 = (1, 2)\n",
