Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,8 @@
     "def distance(a, b, c=2, verbose= True):\n",
     "    if verbose == True:\n",
     "        if c ==1:\n",
-    "            print()\n",
+    "            print('Manhattan distance')\n",
+    "        \n",
     "    pass\n",
     "\n",
     "test_point_1 = (1, 2)\n",
