--- a/index.ipynb
+++ b/index.ipynb
@@ -72,9 +72,10 @@
     "\n",
     "# Complete this function! \n",
     "def distance(a, b, c=2, verbose= True):\n",
+    "    dist = 0\n",
     "    if verbose == True:\n",
     "        if c ==1:\n",
-    "            print('Manhattan distance')\n",
+    "            print('Manhattan distance', dist)\n",
     "        \n",
     "    pass\n",
     "\n",
