Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,8 @@
     "    if verbose == True:\n",
     "        if c ==1:\n",
     "            print('Manhattan distance', dist)\n",
-    "        \n",
+    "        if c == 2: \n",
+    "            print('Euclidan distance')\n",
     "    pass\n",
     "\n",
     "test_point_1 = (1, 2)\n",
