Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,9 +75,10 @@
     "    dist = 0\n",
     "    if verbose == True:\n",
     "        if c ==1:\n",
-    "            print('Manhattan distance', dist)\n",
+    "            print('Manhattan distance:', dist)\n",
     "        if c == 2: \n",
-    "            print('Euclidan distance')\n",
+    "            print('Euclidan distance:', dist)\n",
+    "        else:\n",
     "    pass\n",
     "\n",
     "test_point_1 = (1, 2)\n",
