Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,6 +79,7 @@
     "        if c == 2: \n",
     "            print('Euclidan distance:', dist)\n",
     "        else:\n",
+    "            print('Mikowski distance')\n",
     "    pass\n",
     "\n",
     "test_point_1 = (1, 2)\n",
