Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "# Complete this function! \n",
     "def distance(a, b, c=2, verbose= True):\n",
-    "    dist = np.power(np.power(),1/c)\n",
+    "    dist = np.power(np.power((),c),1/c)\n",
     "    if verbose == True:\n",
     "        if c ==1:\n",
     "            print('Manhattan distance:', dist)\n",
