--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "# Complete this function! \n",
     "def distance(a, b, c=2, verbose= True):\n",
-    "    dist = np.power(np.sum(()**c),1/c)\n",
+    "    dist = np.power(np.sum((a - b)**c),1/c)\n",
     "    if verbose == True:\n",
     "        if c ==1:\n",
     "            print('Manhattan distance:', dist)\n",
@@ -80,7 +80,7 @@
     "            print('Euclidan distance:', dist)\n",
     "        else:\n",
     "            print('Minkowski distance', dist)\n",
-    "    pass\n",
+    "    retu\n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
