Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,6 +73,7 @@
     "\n",
     "# Complete this function! \n",
     "def distance(a, b, c=2, verbose= True):\n",
+    "    a = np.arra\n",
     "    dist = np.power(np.sum((a - b)**c),1/c)\n",
     "    if verbose == True:\n",
     "        if c ==1:\n",
