--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,7 @@
     "def distance(a, b, c=2, verbose= True):\n",
     "    a = np.array(a)\n",
     "    b = np.array(b)\n",
-    "    dist = np.power(np.sum((a - b)**c),1/c)\n",
+    "    dist = np.power(np.sum((b -b)**c),1/c)\n",
     "    if verbose == True:\n",
     "        if c ==1:\n",
     "            print('Manhattan distance:', dist)\n",
