--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,19 +61,11 @@
      "text": [
       "Euclidan distance: 5.0\n",
       "5.0\n",
-      "Manhattan distance: -7.0\n",
-      "Minkowski distance -7.0\n",
-      "-7.0\n",
-      "Minkowski distance nan\n",
-      "nan\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:7: RuntimeWarning: invalid value encountered in power\n",
-      "  import sys\n"
+      "Manhattan distance: 7.0\n",
+      "Minkowski distance 7.0\n",
+      "7.0\n",
+      "Minkowski distance 4.497941445275415\n",
+      "4.497941445275415\n"
      ]
     }
    ],
@@ -84,7 +76,7 @@
     "def distance(a, b, c=2, verbose= True):\n",
     "    a = np.array(a)\n",
     "    b = np.array(b)\n",
-    "    dist = np.power(np.sum((b -b)**c),1/c)\n",
+    "    dist = np.power(np.sum((b -a)**c),1/c)\n",
     "    if verbose == True:\n",
     "        if c ==1:\n",
     "            print('Manhattan distance:', dist)\n",
