--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
     "def distance(a, b, c=2, verbose = True):\n",
     "    a = np.array(a)\n",
     "    b = np.array(b)\n",
-    "    dist = np.power(np.sum(np.abs(b -a)**c),1/c)\n",
+    "    dist = np.power(np.sum(np.abs(a - b)**c),1/c)\n",
     "    if verbose == True:\n",
     "        if c ==1:\n",
     "            print('Manhattan distance:', dist)\n",
