--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,7 @@
     "# Complete this function! \n",
     "def distance(a, b, c=2, verbose = True):\n",
     "    if len(a) != len(b):\n",
-    "        \n",
+    "        return ValueError\n",
     "    a = np.array(a)\n",
     "    b = np.array(b)\n",
     "    dist = np.power(np.sum(np.abs(a - b)**c),1/c)\n",
