Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
     "# Complete this function! \n",
     "def distance(a, b, c=2, verbose = True):\n",
     "    if len(a) != len(b):\n",
-    "        return ValueError\n",
+    "        return ValueError(\"Both vectors must be of equal length!\")\n",
     "    a = np.array(a)\n",
     "    b = np.array(b)\n",
     "    dist = np.power(np.sum(np.abs(a - b)**c),1/c)\n",
