Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,8 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -75,7 +77,7 @@
     "# Complete this function! \n",
     "def distance(a, b, c=2, verbose = True):\n",
     "    if len(a) != len(b):\n",
-    "        return ValueError(\"Both vectors must be of equal length!\")\n",
+    "        raise ValueError(\"Both vectors must be of equal length!\")\n",
     "    a = np.array(a)\n",
     "    b = np.array(b)\n",
     "    dist = np.power(np.sum(np.abs(a - b)**c),1/c)\n",
@@ -93,6 +95,15 @@
     "print(distance(test_point_1, test_point_2)) # Expected Output: 5.0\n",
     "print(distance(test_point_1, test_point_2, c=1)) # Expected Output: 7.0\n",
     "print(distance(test_point_1, test_point_2, c=3)) # Expected Output: 4.497941445275415"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance()"
    ]
   },
   {
