--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 17.939899665271266\n"
+    "   # Expected Output: 17.939899665271266\n",
+    "distance((-2, -3.4, 4, 15, 7))"
    ]
   },
   {
