Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -140,12 +140,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Euclidan distance: 0.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "   # Expected Output: 17.939899665271266\n",
-    "distance((-2, -3.4, 4, 15, 7))"
+    "distance((-2, -3.4, 4, 15, 7),(-2, -3.4, 4, 15, 7))"
    ]
   },
   {
