Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -156,14 +156,14 @@
        "0.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "   # Expected Output: 17.939899665271266\n",
-    "distance((-2, -3.4, 4, 15, 7),(-2, -3.4, 4, 15, 7))"
+    "distance((-2, -3.4, 4, 15, 7),(-2, -3.4, 4, 15, 7), c = 2)"
    ]
   },
   {
