Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -140,30 +140,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Euclidan distance: 0.0\n"
+      "Euclidan distance: 17.939899665271266\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "17.939899665271266"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "   # Expected Output: 17.939899665271266\n",
-    "distance((-2, -3.4, 4, 15, 7),(-2, -3.4, 4, 15, 7), c = 2)"
+    "distance((-2, -3.4, 4, 15, 7),(3, -1.2, -2, -1, 7), c = 2)"
    ]
   },
   {
