Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 20.0"
+    "   # Expected Output: 20.0\n",
+    "distance([0, 0, 0, 7, 16, 2, 0, 1, 2, 1],)"
    ]
   },
   {
