Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -180,12 +180,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manhattan distance: 20.0\n",
+      "Minkowski distance 20.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "   # Expected Output: 20.0\n",
-    "distance([0, 0, 0, 7, 16, 2, 0, 1, 2, 1],)"
+    "distance([0, 0, 0, 7, 16, 2, 0, 1, 2, 1],[1, -1, 5, 7, 14, 3, -2, 3, 3, 6], c=1)"
    ]
   },
   {
