Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,7 @@
     "    if verbose == True:\n",
     "        if c ==1:\n",
     "            print('Manhattan distance:', dist)\n",
-    "        if c == 2: \n",
+    "        elif c == 2: \n",
     "            print('Euclidan distance:', dist)\n",
     "        else:\n",
     "            print('Minkowski distance', dist)\n",
