Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -64,7 +64,6 @@
       "Euclidan distance: 5.0\n",
       "5.0\n",
       "Manhattan distance: 7.0\n",
-      "Minkowski distance 7.0\n",
       "7.0\n",
       "Minkowski distance 4.497941445275415\n",
       "4.497941445275415\n"
@@ -180,15 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Manhattan distance: 20.0\n",
-      "Minkowski distance 20.0\n"
+      "Manhattan distance: 20.0\n"
      ]
     },
     {
@@ -197,7 +195,7 @@
        "20.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
