--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 5.268789659188307"
+    "   # Expected Output: 5.268789659188307\n",
+    "distance()"
    ]
   },
   {
