Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "   # Expected Output: 5.268789659188307\n",
-    "distance()"
+    "distance((-2, 7, 3.4),(3, 4, 1.5), c)"
    ]
   },
   {
