--- a/index.ipynb
+++ b/index.ipynb
@@ -219,12 +219,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minkowski distance 5.268789659188307\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5.268789659188307"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "   # Expected Output: 5.268789659188307\n",
-    "distance((-2, 7, 3.4),(3, 4, 1.5), c)"
+    "distance((-2, 7, 3.4),(3, 4, 1.5), c=3.5)"
    ]
   },
   {
